tests/invalid/unsatisfiable_constraint_msg.err_exp
unsatisfiable_constraint_msg.m:020: In clause for predicate `main'/2:
unsatisfiable_constraint_msg.m:020:   error: the typeclass constraints
unsatisfiable_constraint_msg.m:020:     [38;5;87m`unsatisfiable_constraint_msg.tcb(unsatisfiable_constraint_msg.tb(string))',[39;49m
unsatisfiable_constraint_msg.m:020:     [38;5;87m`unsatisfiable_constraint_msg.tcc(string)'[39;49m
unsatisfiable_constraint_msg.m:020:   are [38;5;203munsatisfiable.[39;49m
